--- a/StockManager/StockManager.csproj
+++ b/StockManager/StockManager.csproj
@@ -484,16 +484,6 @@
     <Content Include="Content\lineicons\fonts\linecons.eot" />
     <Content Include="Content\lineicons\fonts\linecons.ttf" />
     <Content Include="Content\lineicons\fonts\linecons.woff" />
-    <Content Include="Models\StockManager.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>StockManager.edmx</DependentUpon>
-      <LastGenOutput>StockManager.Context.cs</LastGenOutput>
-    </Content>
-    <Content Include="Models\StockManager.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>StockManager.edmx</DependentUpon>
-      <LastGenOutput>StockManager.cs</LastGenOutput>
-    </Content>
     <Content Include="Scripts\js\bootstrap-datetimepicker.js" />
     <Content Include="Scripts\js\bootstrap-inputmask\bootstrap-inputmask.min.js" />
     <Content Include="Scripts\js\bootstrap-switch.js" />
@@ -654,8 +644,18 @@
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>StockManager.Designer.cs</LastGenOutput>
     </EntityDeploy>
+    <Content Include="Models\StockManager.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>StockManager.edmx</DependentUpon>
+      <LastGenOutput>StockManager.Context.cs</LastGenOutput>
+    </Content>
     <Content Include="Models\StockManager.edmx.diagram">
       <DependentUpon>StockManager.edmx</DependentUpon>
+    </Content>
+    <Content Include="Models\StockManager.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>StockManager.edmx</DependentUpon>
+      <LastGenOutput>StockManager.cs</LastGenOutput>
     </Content>
     <None Include="Properties\PublishProfiles\StockManager.pubxml" />
     <Content Include="Views\PurchaseOrders\Create.cshtml" />
@@ -693,9 +693,9 @@
     <Content Include="Views\Products\UpdateOpeningStock.cshtml" />
     <Content Include="Views\Invoices\Print.cshtml" />
     <Content Include="Views\Invoices\SinglePrint.cshtml" />
-    <None Include="Views\Shared\dashboard.cshtml" />
-    <None Include="Views\Shared\dashboard\sidebar.cshtml" />
-    <None Include="Views\Shared\dashboard\topnav.cshtml" />
+    <Content Include="Views\Shared\dashboard.cshtml" />
+    <Content Include="Views\Shared\dashboard\sidebar.cshtml" />
+    <Content Include="Views\Shared\dashboard\topnav.cshtml" />
     <Content Include="Views\Customers\Create.cshtml" />
     <Content Include="Views\Customers\Delete.cshtml" />
     <Content Include="Views\Customers\Details.cshtml" />
