Back button icon and Loged  In User name on topbar

--- a/StockManager/Views/Web.config
+++ b/StockManager/Views/Web.config
@@ -19,6 +19,7 @@
         <add namespace="System.Web.Routing" />
         <add namespace="StockManager" />
         <add namespace="StockManager.Helpers"/>
+        <add namespace="StockManager.Models.LogedUser"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
