--- a/StockManager/StockManager.csproj
+++ b/StockManager/StockManager.csproj
@@ -171,6 +171,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\CompanyController.cs" />
+    <Compile Include="Controllers\DashboardController.cs" />
     <Compile Include="Controllers\InvoicesController.cs" />
     <Compile Include="Controllers\PrintJobWorkReceivedController.cs" />
     <Compile Include="Controllers\PrinterChalansController.cs" />
@@ -195,6 +196,7 @@
     <Compile Include="Models\Customer.cs">
       <DependentUpon>StockManager.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\DashboardVM.cs" />
     <Compile Include="Models\FinancialYear.cs">
       <DependentUpon>StockManager.tt</DependentUpon>
     </Compile>
@@ -708,7 +710,6 @@
     <Content Include="Views\Company\Details.cshtml" />
     <Content Include="Views\Company\Edit.cshtml" />
     <Content Include="Views\Company\Index.cshtml" />
-    <Content Include="Views\Shared\dashboard.cshtml" />
     <Content Include="Views\Shared\dashboard\sidebar.cshtml" />
     <Content Include="Views\Shared\dashboard\topnav.cshtml" />
     <Content Include="Views\Customers\Create.cshtml" />
@@ -723,7 +724,10 @@
     <Content Include="Views\TailorChalanSend\Index.cshtml" />
     <Content Include="Views\Users\profile.cshtml" />
     <Content Include="Views\Company\AddUser.cshtml" />
-    <Content Include="Views\Shared\_AddUser.cshtml" />
+    <Content Include="Views\Dashboard\Index.cshtml" />
+    <Content Include="Views\Dashboard\_Expenses.cshtml" />
+    <Content Include="Views\Dashboard\_Overview.cshtml" />
+    <Content Include="Views\Dashboard\_SalesChart.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
