--- a/StockManager/StockManager.csproj
+++ b/StockManager/StockManager.csproj
@@ -731,6 +731,8 @@
     <Content Include="Views\Dashboard\_Expenses.cshtml" />
     <Content Include="Views\Dashboard\_Overview.cshtml" />
     <Content Include="Views\Dashboard\_SalesChart.cshtml" />
+    <Content Include="Views\Dashboard\_CustomerSupport.cshtml" />
+    <Content Include="Views\Dashboard\_Feeds.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
