--- a/StockManager/StockManager.csproj
+++ b/StockManager/StockManager.csproj
@@ -743,6 +743,7 @@
     <Content Include="Views\Dashboard\_Feeds.cshtml" />
     <Content Include="Views\Report\StockLedger.cshtml" />
     <Content Include="Views\Shared\_ChalanTop.cshtml" />
+    <Content Include="Views\Dashboard\Test.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
