Added Stored Procedure

--- a/StockManager/StockManager.csproj
+++ b/StockManager/StockManager.csproj
@@ -288,6 +288,9 @@
     <Compile Include="Models\UserRole.cs">
       <DependentUpon>StockManager.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\USP_getStockAvailableQTY_Result.cs">
+      <DependentUpon>StockManager.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\USP_ProductWiseStock_Result.cs">
       <DependentUpon>StockManager.tt</DependentUpon>
     </Compile>
